<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mLoginViewMOdel"
            type="com.shiv.demo.features.login.LoginViewModel" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <View
            android:id="@+id/viewToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_tool_bar_height"
            android:background="@drawable/ic_app_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="@+id/viewToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewToolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            android:fillViewport="true"
            android:paddingBottom="@dimen/margin_vertical_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewToolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/match_constraint"
                android:padding="@dimen/padding_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewToolbar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textSize="22sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/customMaterialTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvRegister">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/edtStyleCommon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:text="@={mLoginViewMOdel.request.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/customMaterialTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:endIconDrawable="@{(mLoginViewMOdel.isPasswordViewEnabled==true)?@drawable/ic_eye_hide:@drawable/ic_eye}"
                    app:endIconMode="custom"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/edtStyleCommon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={mLoginViewMOdel.request.password}" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tvSubmit"
                    style="@style/Vehicle.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:drawableEnd="@drawable/ic_arrow_forward"
                    android:onClick="@{v->onClickListener.onClick(v)}"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:text="@string/login"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>